--- a/project/visit.html
+++ b/project/visit.html
@@ -13,7 +13,7 @@
 	<script src='https://kit.fontawesome.com/a076d05399.js'></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
+<body style="font-family: Lovelo, sans-serif;">
   <div class="container">
 		<div id="header-outer" style="transform: translateY(0px) translate(0px, 0px);" class="side-widget-closed">
       <header id="top" style="display: block;">
@@ -41,17 +41,17 @@
                               <ul class="navbar-nav">
                                   <li class="nav-item">
                                       <div class="dropdown">
-                                          <a href="#" class="dropbtn" style="text-decoration: none;">Galleries</a>
+                                          <a href="project.html" class="dropbtn" style="text-decoration: none;">Galleries</a>
                                           <div class="dropdown-content">
-                                              <a href="#" style="text-decoration: none;">Canadian Waters</a>
-                                              <a href="#" style="text-decoration: none;">Rainbow Reef</a>
-                                              <a href="#" style="text-decoration: none;">Dangerous Lagoon</a>
-                                              <a href="#" style="text-decoration: none;">Discovery Centre</a>
-                                              <a href="#" style="text-decoration: none;">The Gallery</a>
-                                              <a href="#" style="text-decoration: none;">Ray Bay</a>
-                                              <a href="#" style="text-decoration: none;">Planet Jellies</a>
-                                              <a href="#" style="text-decoration: none;">Life Support Systems</a>
-                                              <a href="#" style="text-decoration: none;">Shoreline Gallery</a>
+                                              <a href="canadianwater.html" style="text-decoration: none;">Canadian Waters</a>
+                                              <a href="rainbow-reef.html" style="text-decoration: none;">Rainbow Reef</a>
+                                              <a href="dangerous-lagoon.html" style="text-decoration: none;">Dangerous Lagoon</a>
+                                              <a href="discovery-centre.html" style="text-decoration: none;">Discovery Centre</a>
+                                              <a href="the-gallery.html" style="text-decoration: none;">The Gallery</a>
+                                              <a href="raybay.html" style="text-decoration: none;">Ray Bay</a>
+                                              <a href="planet-jellies.html" style="text-decoration: none;">Planet Jellies</a>
+                                              <a href="life-support-system.html" style="text-decoration: none;">Life Support Systems</a>
+                                              <a href="shoreline-gallery.html" style="text-decoration: none;">Shoreline Gallery</a>
                                           </div>
                                       </div>
                                   </li>
@@ -74,12 +74,12 @@
                                   </li>
                                   <li class="nav-item">
                                       <div class="dropdown">
-                                          <a href="#" class="dropbtn" style="text-decoration: none;">Education</a>
+                                          <a href="education.html" class="dropbtn" style="text-decoration: none;">Education</a>
                                           <div class="dropdown-content">
-                                              <a href="#" style="text-decoration: none;">Homeshool Families</a>
-                                              <a href="#" style="text-decoration: none;">Teacher Resources</a>
-                                              <a href="#" style="text-decoration: none;">Sea Scholars Sponsorship</a>
-                                              <a href="#" style="text-decoration: none;">Deep Sea Diary Blog</a>
+                                              <a href="homeschool.html" style="text-decoration: none;">Homeshool Families</a>
+                                              <a href="teacherresource.html" style="text-decoration: none;">Teacher Resources</a>
+                                              <a href="seascholar.html" style="text-decoration: none;">Sea Scholars Sponsorship</a>
+                                              <a href="diary.html" style="text-decoration: none;">Deep Sea Diary Blog</a>
                                           </div>
                                       </div>
                                   </li>
@@ -101,19 +101,19 @@
                                               <a href="faq.html" style="text-decoration: none;">Faqs</a>
                                               <a href="shop.html" style="text-decoration: none;">Shop</a>
                                               <a href="parking.html" style="text-decoration: none;">Parking + Directions</a>
-                                              <a href="dine.html" style="text-decoration: none;">Dine + Dhop</a>
+                                              <a href="dine.html" style="text-decoration: none;">Dine + Shop</a>
                                               <a href="tips.html" style="text-decoration: none;">Tips For The Best Visit</a>
                                           </div>
                                       </div>
                                   </li>
                                   <li class="nav-item">
                                       <div class="dropdown">
-                                          <a href="#" style="text-decoration: none;">Contact</a>
+                                          <a href="contact.html" style="text-decoration: none;">Contact</a>
                                       </div>
                                   </li>
                                   <li class="nav-item">
                                       <div class="dropdown">
-                                          <a href="#" class="dropbtn" style="text-decoration: none;">Buy Tickets</a>
+                                          <a href="buytickets.html" class="dropbtn" style="text-decoration: none;">Buy Tickets</a>
                                       </div>
                                   </li>
                               </ul>
@@ -235,45 +235,42 @@
             <div class="menu-wrap menuwrapper">
               <ul class="menu menuopen">
                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-12403">
-                  <a href="#" onclick="galleries()">GALLERIES</a>
+                  <a href="project.html" onclick="galleries()">GALLERIES</a>
                   <ul class="sub-menu" id="galleries_section">
                     <li class="back" onclick="back()">
                       <a href="#"> Back </a>
                     </li>
                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-17017">
-                      <a href="#">Canadian Waters</a>
+                      <a href="canadianwater.html">Canadian Waters</a>
                     </li>
                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-17062">
-                      <a href="#">Rainbow Reef</a>
+                      <a href="rainbow-reef.html">Rainbow Reef</a>
                     </li>
                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-17146">
-                      <a href="#">Dangerous Lagoon</a>
+                      <a href="dangerous-lagoon.html">Dangerous Lagoon</a>
                     </li>
                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-17269">
-                      <a href="#">Discovery Centre</a>
+                      <a href="discovery-centre.html">Discovery Centre</a>
                     </li>
                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-17318">
-                      <a href="#">The Gallery</a>
+                      <a href="the-gallery.html">The Gallery</a>
                     </li>
                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-17491">
-                      <a href="#">Ray Bay</a>
+                      <a href="raybay.html">Ray Bay</a>
                     </li>
                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-17582">
-                      <a href="#">Planet Jellies</a>
+                      <a href="planet-jellies.html">Planet Jellies</a>
                     </li>
                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-17583">
-                      <a href="#">Life Support Systems</a>
+                      <a href="life-support-system.html">Life Support Systems</a>
                     </li>
                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-12423">
-                      <a href="#">Shoreline Gallery</a>
-                    </li>
-                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-29151">
-                      <a href="#">Shipwrecks</a>
+                      <a href="shoreline-gallery.html">Shoreline Gallery</a>
                     </li>
                   </ul>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-8162 current_page_item menu-item-has-children menu-item-12408">
-                  <a href="#" onclick="galleries_2()">PROGRAMS</a>
+                  <a href="programs.html" onclick="galleries_2()">PROGRAMS</a>
                   <ul class="sub-menu" id="galleries_section_2">
                     <li class="back" onclick="back_2()">
                       <a href="#"> Back </a>
@@ -327,22 +324,22 @@
                   </ul>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-12404">
-                  <a href="#" onclick="galleries_5()">EDUCATION</a>
+                  <a href="education.html" onclick="galleries_5()">EDUCATION</a>
                   <ul class="sub-menu" id="galleries_section_5">
                     <li class="back" onclick="back_5()">
                       <a href="#"> Back </a>
                     </li>
                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-31030">
-                      <a href="#">HOMESCHOOL FAMILIES</a>
+                      <a href="homeschool.html">HOMESCHOOL FAMILIES</a>
                     </li>
                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-31063">
-                      <a href="#">Teacher Resources</a>
+                      <a href="teacherresource.html">Teacher Resources</a>
                     </li>
                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-12439">
-                      <a href="#">Sea Scholars Sponsorship</a>
+                      <a href="seascholar.html">Sea Scholars Sponsorship</a>
                     </li>
                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-15791">
-                      <a href="#">Deep Sea Diary Blog</a>
+                      <a href="diary.html">Deep Sea Diary Blog</a>
                     </li>
                   </ul>
                 </li>
@@ -390,10 +387,10 @@
                   </ul>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-12409">
-                  <a href="#">CONTACT</a>
+                  <a href="contact.html">CONTACT</a>
                 </li>
                 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-30198">
-                  <a href="#">BUY TICKETS</a>
+                  <a href="buytickets.html">BUY TICKETS</a>
                 </li>
               </ul>
             </div>
@@ -401,9 +398,8 @@
       </div>
   </div>
 </div>
-<div w></div>
-	<div class="top" style="background-color: #32a883;">
-		<center><b style="font-size: xx-large;">VISIT</b></center>
+	<div class="top" style="background-color: #32a883">
+		<center><h1><b>VISIT</b></h1></center>
 	</div>
 	<center>
 	<div class="container mt-4">
@@ -507,13 +503,13 @@
                 <h4>Group & Event</h4>
                 <div class="target">
                   <p>
-                    <a href="#" style="text-decoration: none;">Group Sales</a>
+                    <a href="group_rate.html" style="text-decoration: none;">Group Sales</a>
                     <br>
-                    <a href="#" style="text-decoration: none;">Request an Event</a>
+                    <a href="request.html" style="text-decoration: none;">Request an Event</a>
                     <br>
-                    <a href="#" style="text-decoration: none;">Birthday Parties</a>
+                    <a href="birthday.html" style="text-decoration: none;">Birthday Parties</a>
                     <br>
-                    <a href="#" style="text-decoration: none;">Friday Night Jazz</a>
+                    <a href="friday.html" style="text-decoration: none;">Friday Night Jazz</a>
                   </p>
                   <div class="target_logo">
                     <a href="#">
